# mint

./: .gitignore  README.md
ai-translate/: .gitignore  README.md  config.orig.toml  pyproject.toml
ai-translate/ai_translate/: __init__.py  __main__.py  ai_translate.py  worker.py  worker2.py
api-v12/: .env.example  README.md  composer.json
api-v8/: .env.example
api-v8/app/Exceptions/: SectionTimeoutException.php
api-v8/app/Http/: Kernel.php
api-v8/app/Jobs/: AiTranslate.php  BaseRabbitMQJob.php  ProcessAITranslateJob.php
api-v8/app/Mail/: EmailCertif.php  InviteMail.php
api-v8/app/Models/: AccessToken.php  AiModel.php  AttachmentMap.php  Channel.php  Invite.php  Like.php  ModelLog.php  PaliText.php  ProgressChapter.php  Project.php  SentenceAttachment.php  Tag.php  TagMap.php  (+4 more)
api-v8/config/: mint.php  queue.php
api-v8/documents/: llm_assessment.md  task.md
api-v8/routes/: api.php  web.php
coconut/: README.md  xmake.lua
coconut/src/: application.cpp  main.cpp
dashboard-v4/dashboard/: .gitignore  package.json
dashboard-v4/docker/: README.md
deploy/: .gitignore  README.md  ec2.yml  mint.yml
deploy/group_vars/: all.yml
docker/: README.md
docker/alpine/: Dockerfile  build.sh  start.sh
docker/jammy/: Dockerfile  build.sh
docker/laravel/: Dockerfile  README.md  build.sh  run.sh
docker/mint/: Dockerfile  README.md  build.sh  launch.sh  run.sh  start.sh
docker/spring/: Dockerfile  README.md  build.sh  forward.sh  start.sh  ubuntu.Dockerfile
scripts/: .env.dashboard-v4  build.sh  launch.sh  proxy.sh
vagrant/: README.md  Vagrantfile
(+460 files in other folders)
